# xero-cli

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/xero_cli/: main.py
src/xero_cli/accounts/: commands.py
src/xero_cli/auth/: client.py  commands.py  flow.py  token_store.py
src/xero_cli/config/: settings.py
src/xero_cli/invoices/: commands.py
src/xero_cli/reports/: commands.py
src/xero_cli/transactions/: classifier.py  commands.py
tests/: conftest.py  test_auth.py  test_classifier.py  test_invoices.py  test_transactions.py
xero-cli-skill/: REFERENCE.md  SKILLS.md
